(library
 (name Examples)
 (modules :standard \ ExamplesHost)
 (preprocess
  (pps brisk-reconciler.ppx lwt_ppx))
 (libraries ExampleStubs skia str Revery Revery_Lwt flex timber))

(executable
 (name ExamplesHost)
 (modes byte)
 (modules ExamplesHost)
 (public_name Examples)
 (package Revery)
 (libraries ExampleStubs Revery dynlink)
 (flags -linkall))

(install
 (section bin)
 (package Revery)
 (files Info.plist Roboto-Regular.ttf Roboto-RegularItalic.ttf
   Roboto-Bold.ttf FontAwesome5FreeSolid.otf binary.dat outrun-logo.png
   outrun-icon.png revery-icon.png))
