(executables
 (names Examples)
 (preprocess
  (pps brisk-reconciler.ppx lwt_ppx))
 (package ReveryExamples)
 (public_names Examples)
 (libraries ExampleStubs skia skia_native str Revery Revery_Lwt flex timber))

(install
 (section bin)
 (package Revery)
 (files Info.plist Roboto-Regular.ttf Roboto-RegularItalic.ttf
   Roboto-Bold.ttf FontAwesome5FreeSolid.otf binary.dat outrun-logo.png
   reason-logo.png outrun-icon.png revery-icon.png))
