(library
    (name Revery)
    (public_name Revery)
    (libraries console.lib lwt lwt.unix reglfw Revery_Core Revery_Draw Revery_Math Revery_Shaders Revery_Geometry Revery_UI Revery_UI_Components Revery_Native Revery_UI_Primitives Revery_UI_Hooks))

(documentation
   (package Revery)
   (mld_files index))
