(library
 (name Revery)
 (public_name Revery)
 (preprocess
  (pps brisk-reconciler.ppx lwt_ppx))
 (libraries lwt lwt.unix sdl2 Revery_Core Revery_Font Revery_Draw Revery_Math
   Revery_UI Revery_UI_Components Revery_Native Revery_UI_Primitives
   Revery_UI_Hooks Revery_Utility))

(documentation
 (package Revery)
 (mld_files index))
