(executables
    (names SkiaCli)
    (package ReveryExamples)
    (public_names SkiaCli)
    (modes native byte)
    (libraries
        skia
        skia.wrapped.bindings
        skia.wrapped
        reason-native-crash-utils.asan
))

(install
 (section bin)
 (package ReveryExamples)
 (files SkiaCli.bc))
