
(executable
 (name Renderer)
 (modules Renderer)
 (public_name Renderer)
 (libraries 
  js_of_ocaml playground.lib Revery flex)
 )

(executable
 (name Playground)
 (modules Playground reason_util)
 (flags :standard -safe-string -rectypes)
 (link_flags (:standard -linkall))
 (preprocess (pps js_of_ocaml-ppx))
 (libraries 
  bigarray js_of_ocaml js_of_ocaml-compiler js_of_ocaml-toplevel compiler-libs Revery_Core Revery playground.lib reason)
 )

    (rule
     (targets export.txt)
     (deps Playground.bc)
     (action (run jsoo_listunits -o %{targets} stdlib bigarray Revery_Core Revery_Draw Revery_Native Revery_UI Revery_UI_Components Revery playground.lib)))

    (rule
     (targets Playground.js)
     (action
      (run %{bin:js_of_ocaml}
       --export %{dep:export.txt}
       --toplevel
       --pretty
       --noruntime
       --disable genprim
       %{lib:js_of_ocaml-compiler:runtime.js}
       %{lib:js_of_ocaml-compiler:toplevel.js}
       %{lib:js_of_ocaml-compiler:dynlink.js}
       %{lib:reglm:gl-matrix_stubs.js}
       %{lib:reglfw:glfw_stubs.js}
       %{lib:reglfw:gl_stubs.js}
       %{lib:reglfw:image_stubs.js}
       %{lib:reglfw:stb_image_stubs.js}
       %{lib:Revery_Core:file.js}
       %{dep:Playground.bc}
       -o %{targets}
      )))

    (alias
     (name default)
     (deps Playground.js))

(install
    (section bin)
    (package playground)
    (files playground.html gl-matrix-min.js Renderer.bc.js Playground.js worker.js))
