(library
    (name Revery_Core)
    (public_name Revery.Core)
    (js_of_ocaml (javascript_files file.js))
    (c_names file)
    (c_flags :standard -Wall -Wextra -Werror)
    (preprocess (pps ppx_deriving.show))
    (libraries threads console.lib str lwt sdl2 flex fontkit Rench re Revery_Native revery-text-wrap timber))