(library
    (name Revery_Utility)
    (public_name Revery.Utility)
    (c_flags :standard -Wall -Wextra -Werror)
    (preprocess (pps ppx_deriving.show))
    (libraries threads console.lib str lwt sdl2 skia skia.wrapped skia.wrapped.bindings flex Rench re Revery_Core Revery_Draw Revery_UI revery-text-wrap timber))
