(library
 (name FontManager)
 (public_name font-manager)
 (library_flags
  (:include flags.sexp))
 (c_flags
  (:include c_flags.sexp))
 (cxx_flags
  (:include cxx_flags.sexp))
 (cxx_names FontManager FontManagerDummy FontManagerWindows FontManagerMac
   FontManagerLinux))

(rule
 (targets config.h c_flags.sexp cxx_flags.sexp flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))
