(library
    (name sdl2)
    (public_name Revery.sdl2)
    (library_flags (:include flags.sexp))
    (js_of_ocaml (javascript_files sdl2_stubs.js))
    (c_library_flags (:include c_library_flags.sexp))
    (c_flags (:include c_flags.sexp))
    (cxx_names sdl2_wrapper stb_image)
    (cxx_flags (:include cxx_flags.sexp)))

(rule
    (targets c_flags.sexp cxx_flags.sexp flags.sexp c_library_flags.sexp)
    (deps (:discover config/discover.exe))
    (action (run %{discover})))
