(rule
 (targets c_flags.txt c_flags.sexp c_library_flags.txt)
 (deps
  (:discover ../../config/discover.exe))
 (action
  (run %{discover})))

(library
 (name skia_wrapped_c)
 (public_name skia.wrapped.c)
 (preprocess no_preprocessing)
 (libraries sdl2)
 (foreign_stubs
  (language c)
  (names c_stubs)
  (flags
   (:include c_flags.sexp))))
